--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -2,8 +2,9 @@
 
 {% block contenu %}
 <div class="demi-gauche clearfix">
-    <div class="box">
+    <div id="actualites" class="box">
         <h4>Actualités</h4>
+        <a id="rss-actualites" href="/rss/actualites"><img src="/media/img/feed.png" /></a>
 
         <ul class="liste-de-l-accueil">
         {% comment %}<!-- dans la vue, cloner avoirListeActualitesAccueil -->{% endcomment %}
