--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery-ui.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/tabber.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/pagination.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}js/sep.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery.datepicker.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery.timepicker.js"></script>
         <link href="{{ MEDIA_URL }}css/jquery/jquery.datepicker.css" rel="stylesheet" type="text/css" />
