--- a/auf_savoirs_en_partage/templates/savoirs/evenement.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement.html
@@ -14,7 +14,7 @@
       <td>{{ event.dtend.value|date:"Y-m-d H:i" }} (UTC)</td>
     </tr>
     <tr>
-      <th>Déscription</th>
+      <th>Description</th>
       <td>{{ event.description.value|linebreaksbr }}</td>
     </tr>
     <tr>
