--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -6,10 +6,89 @@
 <div class="contenu-wrapper">
 
 <form method="post">
-    <h5>Informations personnelles</h5>
-    {% with personne_form as form %}
-        {% include "table_form.html" %}
-    {% endwith %}
+    <fieldset>
+        <legend>Informations personnelles</legend>
+        {% with personne_form as form %}
+            {% include "table_form.html" %}
+        {% endwith %}
+    </fieldset>
+    
+    <fieldset>
+        <legend>Informations académiques</legend>
+        {% with chercheur_form as form %}
+            {% include "table_form.html" %}
+        {% endwith %}
+    </fieldset>
+    
+    <fieldset>
+        <legend>Etablissement de rattachement</legend>
+        {% with etablissement_form as form %}
+            {% include "table_form.html" %}
+        {% endwith %}
+        <p>Si l'établissement n'existe pas ci-dessus</p>
+        {% with etablissement_autre_form as form %}
+            {% include "table_form.html" %}
+        {% endwith %}
+    </fieldset>
+    
+    <fieldset>
+        <legend>Champ disciplinaire, thèmes de recherche</legend>
+        {% with discipline_form as form %}
+            {% include "table_form.html" %}
+        {% endwith %}
+    </fieldset>
+
+    <fieldset>
+        <legend>Publications</legend>
+        <div>
+            <div class="infotip">
+              <strong>Renseignements préalablements enregistrés</strong>
+              <p>{{publication1_form.instance.publication_affichage}}</p>
+            </div>
+            <div class="publication">
+              {% with publication1_form as form %}
+                  {% include "table_form.html" %}
+              {% endwith %}
+            </div>
+            <div style="clear:both"></div>
+        </div>
+        <p id="show_publications">+ Autres publications</p>
+        <div class="publications_autre">
+            <h6>- Publication 2</h6>
+            <div class="infotip">
+              <strong>Renseignements préalablements enregistrés</strong>
+              <p>{{publication2_form.instance.publication_affichage}}</p>
+            </div>
+            <div class="publication">
+                {% with publication2_form as form %}
+                    {% include "table_form.html" %}
+                {% endwith %} 
+            </div>
+            <div style="clear:both"></div>
+            <h6>- Publication 3</h6>
+            <div class="infotip">
+              <strong>Renseignements préalablements enregistrés</strong>
+              <p>{{publication3_form.instance.publication_affichage}}</p>
+            </div>
+            <div class="publication">
+                {% with publication3_form as form %}
+                    {% include "table_form.html" %}
+                {% endwith %}
+            </div>
+            <div style="clear:both"></div>     
+            <h6>- Publication 4</h6>
+            <div class="infotip">
+              <strong>Renseignements préalablements enregistrés</strong>
+              <p>{{publication4_form.instance.publication_affichage}}</p>
+            </div>
+            <div class="publication">
+                {% with publication4_form as form %}
+                    {% include "table_form.html" %}
+                {% endwith %}
+            </div>
+            <div style="clear:both"></div>
+        </div>
+    </fieldset>
 
     <input type="submit" name="Submit" value="Éditer" class="bouton" />
 </form>
