--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -44,8 +44,9 @@
 
 
 <div class="demi-droite clearfix">
-    <div class="box">
+    <div id="agenda" class="box">
         <h4>Agenda</h4>
+        <a id="rss-agenda" href="/rss/agenda"><img src="/media/img/feed.png" /></a>
         <ul class="sous-menu">
             <li><a href="{% url savoirs.views.evenement_ajout %}">Soumettre un événement</a></li>
             <li><a href="{{ caldav_url }}">S'abonner</a></li>
