--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -46,6 +46,7 @@
 <div class="demi-droite clearfix">
     <div id="agenda" class="box">
         <h4>Agenda</h4>
+        {% if not erreur_caldav %}
         <a id="rss-agenda" href="/rss/agenda"><img src="/media/img/feed.png" /></a>
         <ul class="sous-menu">
             <li><a href="{% url savoirs.views.evenement_ajout %}">Soumettre un événement</a></li>
@@ -62,6 +63,10 @@
             </li>
         {% endfor %}
         </ul>
+        {% else %}
+            <ul><li>{{ erreur_caldav }}</li></ul>
+        {% endif %}
+
     </div>
     <div class="box">
         <h4>Sites</h4>
