--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -26,12 +26,12 @@ a:hover {color:#97012c;}
 a img {border: none;}
 abbr, acronym {border-bottom:.1em dotted;cursor:help;}
 
-h1{font-size:1em;margin:0 0 1em 0;}
-h2{font-size:1em;margin:0 0 1em 0;}
-h3{font-size:1em;margin:0 0 1em 0;}
-h4{font-size:1em;margin:0 0 1em 0;}
-h5{font-size:1em;margin:0 0 1em 0;}
-h6{font-size:1em;margin:0 0 1em 0;}
+h1 {font-size:1em;margin:0 0 1em 0;}
+h2 {font-size:1em;margin:0 0 1em 0;}
+h3 {font-size:1em;margin:0 0 1em 0;}
+h4 {font-size:1em;margin:0 0 1em 0;}
+h5 {font-size:1em;margin:0 0 1em 0;}
+h6 {font-size:1em;margin:0 0 1em 0;}
 
 em{font-style:italic;}
 strong{font-weight:bold;}
@@ -49,19 +49,25 @@ sup{font-size: smaller; vertical-align: 0.5em; line-height: 1px;}
 #fond {padding:0; margin:0; display:block; position:relative; width:100%; height:auto !important; height:100%; min-height:100%; background: url(../img/background-fond.jpg) no-repeat 50% 0; text-align:left;}
 #enrobage {padding:0; margin:0 auto; display:block; position:relative; width:960px; height:auto !important; height:100%; min-height:100%;}
 
-h1 { float:left; width:144px; height:110px; margin-top:25px; margin-left:20px; display:inline;}
+div.sous-menu { float:right; padding-top:1px; color:#fff; }
+div.sous-menu a { display:block; height:19px; padding:5px 10px 1px 10px; color:#fff; font-size:1.1em; text-decoration:none; float:right; white-space:nowrap; background-color:#4c4030;}
+div.sous-menu a:hover { text-decoration:underline;}
+div.sous-menu a.bout-gauche { background:#4c4030 url(../img/sous-menu-top-coin-gauche.gif) no-repeat 0 0; padding-right:5px;}
+div.sous-menu a.bout-droit {  background:#4c4030 url(../img/sous-menu-top-coin-droit.gif) no-repeat 100% 0; padding-left:5px;}
+div.sous-menu span { display:block; height:19px;float:right;padding:6px 2px 0 2px; background-color:#4c4030;}
+
+div.gauche { position:absolute; left:0; }
+div.droite {  }
+
+#logo { float:left; width:144px; height:110px; margin-top:45px; margin-left:20px; }
 h1 a { display:block; width:144px; height:110px; text-indent:-99999px; background:url(../img/logo-agence-universitaire-de-la-francophonie.gif) no-repeat 0 0;border:none; text-decoration:none;}
-#sous-menu { padding-top:1px; margin-right:0; color:#fff; display:inline; height:24px; width:420px; float:right;}
-#sous-menu a { display:block; height:19px; padding:5px 10px 1px 10px; color:#fff; font-size:1.1em; text-decoration:none; float:right; white-space:nowrap; background-color:#4c4030;}
-#sous-menu a:hover { text-decoration:underline;}
-#sous-menu a.bout-gauche { background:#4c4030 url(../img/sous-menu-top-coin-gauche.gif) no-repeat 0 0; padding-right:5px;}
-#sous-menu a.bout-droit {  background:#4c4030 url(../img/sous-menu-top-coin-droit.gif) no-repeat 100% 0; padding-left:5px;}
-#sous-menu span { display:block; height:19px;float:right;padding:6px 2px 0 2px; background-color:#4c4030;}
-h2.slogan { position:absolute; top:33px; left:240px; display:block; font-size:3.4em; color:#3a3125; padding:0;font-family:"Myriad Pro", "Lucida Grande", sans-serif; font-weight:normal; letter-spacing:-1px; line-height:0.8em; z-index:1000; }
+
+#sep-recherche {  }
+h2.slogan { position:absolute; top:53px; left:240px; font-size:3.4em; color:#3a3125; padding:0;font-family:"Myriad Pro", "Lucida Grande", sans-serif; font-weight:normal; letter-spacing:-1px; line-height:0.8em; z-index:1000; }
 h2.slogan span { display:block; margin: .7em 0 0; font-size:0.55em; color:#97012c; letter-spacing:normal; line-height: 1.1;}
-div.boite-recherche { z-index:1000; display:block; position:absolute; top:130px; left:240px; width:390px; height:90px; background: url(../img/recherche-background.gif) no-repeat 0 5px;}
-div.boite-recherche input { position:absolute; top:26px; left:10px; height:16px; margin-top:10px; width:300px; background:none; font-size:1.3em; border:none;}
-div.boite-recherche button { position:absolute; top:22px; right:17px; height:45px; width:45px; background:url(../img/recherche-button.gif) no-repeat 0 0; color:#97012c; border:none;}
+div.boite-recherche { z-index:1000; position:absolute; top:150px; left:240px; width:390px; height:90px; background: url(../img/recherche-background.gif) no-repeat 0 5px;}
+div.boite-recherche input { position:absolute; top:26px; left:10px; width:300px; height:16px; margin-top:10px; background:none; font-size:1.3em; border:none;}
+div.boite-recherche button { position:absolute; top:22px; right:17px; width:45px; height:45px; background:url(../img/recherche-button.gif) no-repeat 0 0; color:#97012c; border:none;}
 div.boite-recherche button:hover { background:url(../img/recherche-button-over.gif) no-repeat 0 0; cursor:pointer;}
 div.boite-recherche h3 { font-size:2em; font-weight:normal; letter-spacing:-1px; margin: 0;}
 div.boite-recherche h3 span { font-size:.6em; font-weight:normal; letter-spacing: normal;}
@@ -69,7 +75,15 @@ div.boite-recherche p { position:absolute; bottom:13px; left: 0; color:#3a3125; 
 div.boite-recherche p a { color:#3a3125;}
 div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
-#contenu { width:744px; margin:100px 0px 50px 0px; padding:0; display:inline; float:left;background:url(../img/contenu-bkg-middle.png) repeat-y 0 0; }
+#col-menu { clear:right; float:right; width:190px; margin:30px 20px 0px 0px; background: url(../img/col-droite-background.png) repeat-x top center; font-size:1.2em; line-height:1.2; }
+#col-menu img.bottom { margin-bottom:-7px; }
+#col-menu h4 { padding: 0 25px; margin-bottom:0.4em; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
+#col-menu ul li { margin:2px 0; padding:0; }
+#col-menu a { margin:0; padding:0; text-decoration:none; color:black; }
+#col-menu a:hover { cursor:pointer; text-decoration:underline; }
+#col-menu .actif a { color:#97012c; font-weight:bold; }
+
+#contenu { width:744px; margin:100px 0px 50px 0px; padding:0; float:left;background:url(../img/contenu-bkg-middle.png) repeat-y 0 0; }
 #tabs { margin-left: 8px; margin-right: 8px; }
 #contenu h4 { padding: 0 25px; margin-bottom:0.4em; font-size:2.2em; font-weight:normal; letter-spacing:-1px; }
 #contenu .zone-texte {padding: 0 25px; font-size: 1.2em; min-height: 375px;}
@@ -88,8 +102,6 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #contenu .demi-gauche img.bottom { height:9px;  position:relative; bottom:-9px;}
 
 .contenu-wrapper { padding:0 0 0 25px; }
-
-
 
 ul a { text-decoration:none; }
 ul a:hover { text-decoration:underline; }
@@ -123,14 +135,6 @@ ul.sous-menu li { display:inline; padding:0px 10px 0px 0px; font-size: 1.1em; }
 .resultatPages span a span.lien-texte { color:#97012c; text-decoration:underline; font-weight:bold;}
 .resultatPages span a span.lien-texte span { color:#97012c; text-decoration: none; font-weight: normal;}
 .resultatPages span a:hover span.lien-texte { text-decoration:none;}
-
-#col-droite { clear:right; float:right; display:inline; width:190px; margin-right:0; margin-bottom:50px; background: url(../img/col-droite-background.png) repeat-x top center; }
-#col-droite img.bottom { margin-bottom:-7px; }
-#col-droite ul { margin-top:30px; margin-left:20px; line-height:1.2; }
-#col-droite ul li { margin:2px 0; padding:0; }
-#col-droite ul li a { margin:0; padding:0; font-size:1.2em; color:#3a3125; text-decoration:none; }
-#col-droite ul li a:hover { cursor:pointer; text-decoration:underline; }
-#col-droite ul li.actif a { color:#97012c; font-weight:bold; }
 
 /* Divers */
 
