--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -28,11 +28,21 @@
     <body>
         <div id="fond">
             <div id="enrobage" class="clearfix">
-                <h1>
-                    <a href="http://www.auf.org" title="Agence universitaire de la Francophonie">Agence universitaire de la Francophonie</a>
-                </h1>
-
-                <div id="sous-menu" class="clearfix">
+                <div class="clearfix sous-menu gauche">
+                    <a href="" class="bout-droit">Actualités</a>
+                    <span>|</span>
+                    <a href="">Agenda</a>
+                    <span>|</span>
+                    <a href="">Sites</a>
+                    <span>|</span>
+                    <a href="">Ressources</a>
+                    <span>|</span>
+                    <a href="">Chercheurs</a>
+                    <span>|</span>
+                    <a href="{% url savoirs.views.index %}" class="bout-gauche">Accueil</a>
+                </div>
+                
+                <div class="clearfix sous-menu droite">
                     {% if user.is_authenticated %}
                     <a href="{% url django.contrib.auth.views.logout %}" class="bout-droit">Déconnexion</a>
                     {% else %}
@@ -41,25 +51,22 @@
                     <span>|</span>
                     <a href="{% url savoirs.views.nous_contacter %}">Nous contacter</a>
                     <span>|</span>
-                    <a href="{% url savoirs.views.a_propos %}">À propos de</a>
-                    <span>|</span>
-                    <a href="{% url savoirs.views.index %}" class="bout-gauche">Accueil</a>
+                    <a href="{% url savoirs.views.a_propos %}" class="bout-gauche">À propos de</a>
+                </div>
+                
+                <div id="logo">
+                    <h1>
+                        <a href="http://www.auf.org" title="Agence universitaire de la Francophonie">Agence universitaire de la Francophonie</a>
+                    </h1>
                 </div>
 
-                <div id="col-droite">
-                    {% load sep_menu %}
-                    {% sep_menu %}
-                    <img src="{{ MEDIA_URL }}img/col-droite-background-bottom.png" width="190" height="8" alt="bottom" align="bottom" class="bottom" />
-                </div>
-
-                <div>
+                <div id="sep-recherche">
                     <h2 class="slogan">Savoirs en partage 
-                        <span>Le portail des ressources scientifiques
-                            <br />et pédagogiques de l'AUF</span>
+                        <span>Le portail des ressources scientifiques<br />et pédagogiques de l'AUF</span>
                     </h2>
 
                     <div class="boite-recherche">
-                        <h3>Recherche <span>dans tous les sites reliés à l'AUF</span></h3>
+                        <h3>Recherche <span>dans les ressources scientifiques</span></h3>
 
                         <form name="fRecherche" id="fRecherche" action="{% url savoirs.views.recherche %}" method="get">
                             <input name="q" id="recherche" type="text" value="{{ q|default:"" }}" />
@@ -71,6 +78,12 @@
                         <a href="{% url savoirs.views.conseils %}">Conseils</a>
                         </p>
                     </div>
+                </div>
+
+                <div id="col-menu">
+                    {% load sep_menu %}
+                    {% sep_menu %}
+                    <img src="{{ MEDIA_URL }}img/col-droite-background-bottom.png" width="190" height="8" alt="bottom" align="bottom" class="bottom" />
                 </div>
                 
                 <div id="contenu" class="clearfix">
