Site retrait de la verification de la validite des urls

--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -13,12 +13,12 @@
         {% endwith %}
     </fieldset>
     
-    <fieldset>
+    <!--<fieldset>
         <legend>Informations académiques</legend>
         {% with chercheur_form as form %}
             {% include "table_form.html" %}
         {% endwith %}
-    </fieldset>
+    </fieldset>-->
     
     <fieldset>
         <legend>Etablissement de rattachement</legend>
@@ -37,14 +37,28 @@
             {% include "table_form.html" %}
         {% endwith %}
     </fieldset>
-
+    
+    <fieldset>
+        <legend>Thèse</legend>
+        <div>
+            <div class="publication">
+              {% with these_form as form %}
+                  {% include "table_form.html" %}
+              {% endwith %}
+            </div>
+            <div style="clear:both"></div>
+        </div>
+    </fieldset>
+    
     <fieldset>
         <legend>Publications</legend>
         <div>
+            {% ifnotequal publication1_form.instance.titre None %}
             <div class="infotip">
               <strong>Renseignements préalablements enregistrés</strong>
               <p>{{publication1_form.instance.publication_affichage}}</p>
             </div>
+            {% endifnotequal %}
             <div class="publication">
               {% with publication1_form as form %}
                   {% include "table_form.html" %}
@@ -55,10 +69,12 @@
         <p id="show_publications">+ Autres publications</p>
         <div class="publications_autre">
             <h6>- Publication 2</h6>
+            {% ifnotequal publication1_form.instance.titre None %}
             <div class="infotip">
               <strong>Renseignements préalablements enregistrés</strong>
               <p>{{publication2_form.instance.publication_affichage}}</p>
             </div>
+            {% endifnotequal %}
             <div class="publication">
                 {% with publication2_form as form %}
                     {% include "table_form.html" %}
@@ -66,10 +82,12 @@
             </div>
             <div style="clear:both"></div>
             <h6>- Publication 3</h6>
+            {% ifnotequal publication3_form.instance.titre None %}
             <div class="infotip">
               <strong>Renseignements préalablements enregistrés</strong>
               <p>{{publication3_form.instance.publication_affichage}}</p>
             </div>
+            {% endifnotequal %}
             <div class="publication">
                 {% with publication3_form as form %}
                     {% include "table_form.html" %}
@@ -77,10 +95,12 @@
             </div>
             <div style="clear:both"></div>     
             <h6>- Publication 4</h6>
+            {% ifnotequal publication4_form.instance.titre None %}
             <div class="infotip">
               <strong>Renseignements préalablements enregistrés</strong>
               <p>{{publication4_form.instance.publication_affichage}}</p>
             </div>
+            {% endifnotequal %}
             <div class="publication">
                 {% with publication4_form as form %}
                     {% include "table_form.html" %}
