--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -49,7 +49,7 @@ sup{font-size: smaller; vertical-align: 0.5em; line-height: 1px;}
 #fond {padding:0; margin:0; display:block; position:relative; width:100%; height:auto !important; height:100%; min-height:100%; background: url(../img/background-fond.jpg) no-repeat 50% 0; text-align:left;}
 #enrobage {padding:0; margin:0 auto; display:block; position:relative; width:960px; height:auto !important; height:100%; min-height:100%;}
 
-div.sous-menu { float:right; padding-top:1px; color:#fff; }
+div.sous-menu { float:right; padding-top:1px; color:#fff; font-weight:bold; }
 div.sous-menu a { display:block; height:19px; padding:5px 10px 1px 10px; color:#fff; font-size:1.1em; text-decoration:none; float:right; white-space:nowrap; background-color:#4c4030;}
 div.sous-menu a:hover { text-decoration:underline;}
 div.sous-menu a.bout-gauche { background:#4c4030 url(../img/sous-menu-top-coin-gauche.gif) no-repeat 0 0; padding-right:5px;}
