--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -25,7 +25,7 @@
     <div class="box">
         <h4>Chercheurs</h4>
         <ul class="sous-menu">
-            <li><a href="{% url chercheurs.views.repertoire %}">Répertoire</a></li>
+            <li><a href="{% url chercheurs.views.index %}">Répertoire</a></li>
             <li><a href="{% url chercheurs.views.inscription %}">Inscription</a></li>
             {% if user_chercheur %}
             <li><a href="{% url chercheurs.views.perso %}">Espace chercheur</a></li>
