--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -4,66 +4,101 @@
 <h4>{{ chercheur }}</h4>
 
 <div class="contenu-wrapper">
-<p>{{chercheur.personne.courriel}}</p>
-<h5>Information générales</h5>
-<table>
-    <tr class="odd">
-        <td>Nationalité</td>
-        <td>{{chercheur.nationalite.nom}}</td>
-    </tr>
-    <tr>
-        <td>Fonction :</td>
-        <td>{{chercheur.fonction}}</td>
-    </tr>
-    <tr class="odd">
-        <td>Diplôme :</td>
-        <td>{{chercheur.diplome}}</td>
-    </tr>
-</table>
+    <div id="fiche_chercheur">
+        <p>{{chercheur.personne.courriel}}</p>
+        
+        <h5>Information générales</h5>
+        <table>
+            <tr>
+                <td class="label">Nationalité:</td>
+                <td>{{chercheur.nationalite.nom}}</td>
+            </tr>
+            <tr>
+                <td class="label">Fonction:</td>
+                <td>{{chercheur.fonction}}</td>
+            </tr>
+            <tr>
+                <td class="label">Diplôme:</td>
+                <td>{{chercheur.diplome}}</td>
+            </tr>
+        </table>
 
-<h5>Établissement de rattachement</h5>
-<table>
-    <tr class="odd">
-        <td>Localisation</td>
-        <td>{{chercheur.etablissement.pays}}</td>
-    </tr>
-    <tr>
-        <td>Établissement</td>
-        <td>{{chercheur.etablissement.nom}}</td>
-    </tr>
-</table>
+        <h5>Établissement de rattachement</h5>
+        <table>
+            <tr>
+                <td class="label">Localisation:</td>
+                <td>{% firstof chercheur.etablissement.pays chercheur.etablissement_autre_pays "-" %}</td>
+            </tr>
+            <tr>
+                <td class="label">Établissement:</td>
+                <td>{% firstof chercheur.etablissement.nom chercheur.etablissement_autre_nom "-" %}</td>
+            </tr>
+        </table>
 
-<h5>Champ disciplinaire, thèmes de recherche et publications</h5>
-<table>
-    <tr class="odd">
-        <td>Thèmes de recherche et domaine d'expertise</td>
-        <td>{{chercheur.expertise}}</td>
-    </tr>
-    <tr>
-        <td>Adresse site Internet personnel</td>
-        <td>{%if chercheur.url_site_web %}<a href="{{chercheur.url_site_web}}">{{chercheur.url_site_web}}</a>{% endif %}</td>
-    </tr>    
-    <tr class="odd">
-        <td>Publication 1</td>
-        <td>{{chercheur.publication1.publication_affichage}}</td>
-    </tr>
-    <tr>
-        <td>Publication 2</td>
-        <td>{{chercheur.publication2.publication_affichage}}</td>
-    </tr>
-    <tr class="odd">
-        <td>Publication 3</td>
-        <td>{{chercheur.publication3.publication_affichage}}</td>
-    </tr>
-</table>
+        <h5>Thèmes de recherche et publications</h5>
+        <table id="publications">
+            <tr>
+                <td class="label">Thèmes de recherche et domaine d'expertise:</td>
+                <td>{{chercheur.expertise}}</td>
+            </tr>
+            <tr>
+                <td class="label">Thèse:</td>
+                <td>{{chercheur.these.publication_affichage}}</td>
+            </tr>
+            <tr>
+                <td class="label">Publication 1:</td>
+                <td>
+                    {% with chercheur.publication1 as publication %}{% include "chercheurs/publication_display.html" %}{% endwith %}
+                </td>
+            </tr>
+            <tr>
+                <td class="label">Publication 2:</td>
+                <td>{{chercheur.publication2.publication_affichage}}</td>
+            </tr>
+            <tr>
+                <td class="label">Publication 3:</td>
+                <td>{{chercheur.publication3.publication_affichage}}</td>
+            </tr>
+            <tr>
+                <td class="label">Publication 4:</td>
+                <td>{{chercheur.publication4.publication_affichage}}</td>
+            </tr>
+        </table>
 
-<h5>Domaines de recherche</h5>
-<p>Adhésion active</p>
-<ul>
-{% for g in chercheur.chercheurgroupe_set.all %}
-<li>{{g.groupe.nom}}</li>
-{% endfor %}
-</ul>
+        <h5>Domaines de recherche</h5>
+        <table>
+            <tr>
+                <td class="label">Adhésion(s) active(s):</td>
+                <td>
+                <ul>
+                    {% for g in chercheur.chercheurgroupe_set.all %}
+                    <li>{{g.groupe.nom}}</li>
+                    {% endfor %}
+                    </ul>
+                </td>
+            </tr>
+        </table>
+
+        <h5>Site web personnel</h5>
+        <table>
+            <tr>
+                <td class="label">Url site web:</td>
+                <td>{% firstof chercheur.url_site_web "" %}</td>
+            </tr>
+            <tr>
+                <td class="label">Blog:</td>
+                <td>{% firstof chercheur.url_blog "" %}</td>
+            </tr>
+            <tr>
+                <td class="label">Facebook:</td>
+                <td>{% firstof chercheur.url_facebook "" %}</td>
+            </tr>
+            <tr>
+                <td class="label">Linkedin:</td>
+                <td>{% firstof chercheur.url_linkedin "" %}</td>
+            </tr>
+        </table>
+    </div>
 
 </div>
 
