--- a/auf_savoirs_en_partage/templates/savoirs/logout.html
+++ b/auf_savoirs_en_partage/templates/savoirs/logout.html
@@ -4,7 +4,7 @@
 
 <div class="zone-texte">
   <p>Vous êtes maintenant déconnecté.</p>
-  <p><a href="{% url savoirs.views.index %}">Retour</a></p>
+  <p><a href="{% url savoirs.views.index %}">Retour à l'accueil</a>.</p>
 </div>
 
 {% endblock %}
