--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -86,6 +86,8 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #contenu { width:744px; margin:100px 0px 50px 0px; padding:0; float:left;background:url(../img/contenu-bkg-middle.png) repeat-y 0 0; }
 #tabs { margin-left: 8px; margin-right: 8px; }
 #contenu h4 { padding: 0 25px; margin-bottom:0.4em; font-size:2.2em; font-weight:normal; letter-spacing:-1px; }
+#contenu h4 a { text-decoration:none; color:black; }
+#contenu h4 a:hover { text-decoration:underline; }
 #contenu .zone-texte {padding: 0 25px; font-size: 1.2em; min-height: 375px;}
 #contenu .zone-texte ul li {list-style: disc; margin: 0 0 .25em;}
 #contenu .zone-texte ol li {list-style: decimal; margin: 0 0 .25em;}
