--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -5,13 +5,14 @@
     <div id="actualites" class="box">
         <h4><a href="{% url savoirs.views.actualite_index %}">Actualités</a></h4>
         <a id="rss-actualites" href="/rss/actualites"><img src="/media/img/feed.png" /></a>
+        
         <ul class="sous-menu">
             <li><a href="{% url savoirs.views.actualite_index %}">Toutes les actualités</a></li>
         </ul>
-
+        
         <ul class="liste-de-l-accueil">
         {% for actualite in actualites %}
-            <li class="clearfix">
+            <li>
             <span class="la-date">{{ actualite.date|date:"d F Y" }}</span>
             <a href="{{ actualite.url }}" class="le-titre">{{ actualite.titre|truncatewords:20 }}</a>
             {% if actualite.source %}
@@ -26,18 +27,18 @@
     </div>
     <div id="chercheurs" class="box">
         <h4><a href="{% url chercheurs.views.index %}">Chercheurs</a></h4>
+        
         <ul class="sous-menu">
             <li><a href="{% url chercheurs.views.index %}">Répertoire</a></li>
             <li><a href="{% url chercheurs.views.inscription %}">Inscription</a></li>
-            {% if user_chercheur %}
             <li><a href="{% url chercheurs.views.perso %}">Espace chercheur</a></li>
-            {% endif %}
         </ul>
+        
         <ul class="liste-de-l-accueil">
         {% for chercheur in chercheurs %}
-            <li class="clearfix">
+            <li>
             <a href="{% url chercheurs.views.retrieve chercheur.id %}" class="le-titre">{{ chercheur }}</a>
-            {% if chercheurs.disciplines %}<span class="la-date">Disciplines : {{ chercheur.discipline }}</span>{% endif %}
+            {% if chercheur.discipline %}<span class="la-date">Discipline : {{ chercheur.discipline }}</span>{% endif %}
             </li>
         {% endfor %}
         </ul>
@@ -48,18 +49,18 @@
         <h4><a href="{% url savoirs.views.evenement_index %}">Agenda</a></h4>
         {% if not erreur_caldav %}
             <a id="rss-agenda" href="/rss/agenda"><img src="/media/img/feed.png" /></a>
+            
             <ul class="sous-menu">
                 <li><a href="{% url savoirs.views.evenement_index %}">Tous les événements</a></li>
                 <li><a href="{% url savoirs.views.evenement_ajout %}">Soumettre un événement</a></li>
                 {% comment %}<li><a href="{{ caldav_url }}">S'abonner</a></li>{% endcomment %}
             </ul>
+            
             <ul class="liste-de-l-accueil">
             {% for event in events %}
                 <li>
-                <span class="la-date">{{ event.dtstart.value|date:"d F Y" }} 
-                  {{ event.dtstart.value|date:"H:i" }}</span>
-                <a href="{% url savoirs.views.evenement event.uid.value %}" 
-                  class="le-titre">{{ event.summary.value|truncatewords:20 }}</a>
+                <span class="la-date">{{ event.dtstart.value|date:"d F Y" }} {{ event.dtstart.value|date:"H:i" }}</span>
+                <a href="{% url savoirs.views.evenement event.uid.value %}" class="le-titre">{{ event.summary.value|truncatewords:20 }}</a>
                 <span class="le-resume">{{ event.description.value|truncatewords:20 }}</span>
                 </li>
             {% endfor %}
@@ -70,12 +71,14 @@
     </div>
     <div  id="sites" class="box">
         <h4><a href="{% url sitotheque.views.index %}">Sites</a></h4>
+        
         <ul class="sous-menu">
             <li><a href="{% url sitotheque.views.index %}">Sitothèque</a></li>
         </ul>
+        
         <ul class="liste-de-l-accueil">
         {% for site in sites %}
-            <li class="clearfix">
+            <li>
             <a href="{% url sitotheque.views.retrieve site.id %}" class="le-titre">{{ site }}</a>
             <a href="{{ site.url }}" class="le-titre">{{ site.url }}</a>
             {% if site.discipline.all.count %}<span class="la-date">Disciplines : {{ site.discipline.all|join:", " }}</span>{% endif %}
