--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -79,8 +79,8 @@
         <ul class="liste-de-l-accueil">
         {% for site in sites %}
             <li>
-            <a href="{% url sitotheque.views.retrieve site.id %}" class="le-titre">{{ site }}</a>
-            <a href="{{ site.url }}" class="le-titre">{{ site.url }}</a>
+            <a href="{% url sitotheque.views.retrieve site.id %}" class="le-titre">{{ site|truncatewords:20 }}</a>
+            <a href="{{ site.url }}" class="la-date">{{ site.url }}</a>
             {% if site.discipline.all.count %}<span class="la-date">Disciplines : {{ site.discipline.all|join:", " }}</span>{% endif %}
             </li>
         {% endfor %}
