--- a/auf_savoirs_en_partage/templates/savoirs/resultat.html
+++ b/auf_savoirs_en_partage/templates/savoirs/resultat.html
@@ -3,23 +3,28 @@
   {% if r.creator %}
   <div><span class="lbl">Auteur:</span> {{ r.creator|safe }}</div>
   {% endif %}
-  {% if r.contributors %}
-  <div><span class="lbl">Contributeurs:</span> {{ r.contributors|safe }}</div>
-  {% endif %}
-  {% if r.subject %}
-  <div><span class="lbl">Sujets:</span> {{ r.subject|safe }}</div>
-  {% endif %}
-  {% if r.source %}
-  <div><span class="lbl">Source:</span> {{ r.source|safe }}</div>
-  {% endif %}
-  {% if r.modified %}
-  <div><span class="lbl">Date de modification:</span> {{ r.modified }}</div>
-  {% endif %}
+  {% if r.content %}
   <div class="resultatResume"><span class="lbl">Description:</span> {{ r.content|safe }}</div>
-  {% if r.isbn %}
-  <div><span class="lbl">ISBN:</span> {{ r.isbn|safe }}</div>
   {% endif %}
-  {% if user.is_authenticated %}
-  <a href="{{ r.admin_url}}" target="_blank">Modifier</a>
-  {% endif %}
+  
+  {% comment %}
+      {% if r.contributors %}
+      <div><span class="lbl">Contributeurs:</span> {{ r.contributors|safe }}</div>
+      {% endif %}
+      {% if r.subject %}
+      <div><span class="lbl">Sujets:</span> {{ r.subject|safe }}</div>
+      {% endif %}
+      {% if r.source %}
+      <div><span class="lbl">Source:</span> {{ r.source|safe }}</div>
+      {% endif %}
+      {% if r.modified %}
+      <div><span class="lbl">Date de modification:</span> {{ r.modified }}</div>
+      {% endif %}
+      {% if r.isbn %}
+      <div><span class="lbl">ISBN:</span> {{ r.isbn|safe }}</div>
+      {% endif %}
+      {% if user.is_authenticated %}
+      <a href="{{ r.admin_url}}" target="_blank">Modifier</a>
+      {% endif %}
+  {% endcomment %}
 </div>
