--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -1,6 +1,31 @@
 {% extends "container_base.html" %}
 
+{% load pagination_tags %}
+{% load sorting_tags %}
+
+
+{% autosort ressources %}
+{% autopaginate ressources 10 %}
+
+
 {% block contenu %}
 <h4>Ressources</h4>
+
+<div class="contenu-wrapper">
+<div class="centre">{% paginate %}</div>
+<table id="repertoire">
+    <tr>
+        <th>Nom</th>
+        <th>Source</th>
+    </tr>
+{% for r in ressources %}
+    <tr class="{% cycle 'odd' 'notodd' %}">
+        <td><a href="{% url savoirs.views.ressource_retrieve r.id %}" class="le-titre">{{ r.title|truncatewords:11 }}</a></td>
+        <td>{{ r.server }}</td>
+    </tr>
+{% endfor %}
+</table>
+<div class="centre">{% paginate %}</div>
+</div>
 
 {% endblock %}
